--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "8.1|8.0",
+        "php": "^8.1|^8.0|^8.2",
         "laravel/nova": "^3.12.0"
     },
     "autoload": {
